# slmgr-py

./: .coveragerc  .gitattributes  .gitignore  .yamllint  LICENSE.txt  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  slmgr.py
.github/workflows/: Build-Release-Windows.yml
tests/: __init__.py  conftest.py  test_ad_token.py  test_cli.py  test_commands.py  test_core.py  test_display_kms.py  test_expiration.py  test_hypothesis_parsing.py  test_hypothesis_utilities.py  test_utilities.py
